# NuRef

./: CMakeLists.txt  GNUmakefile  HFNG_model.cc  HFNG_model.in  HFNG_model.out  README  README.md  Readme.txt  gps.mac  read_gdml.mac  run.mac  vis.mac
Additional Macros/: test.mac
Extra goodies (NEEDS CLEANING)/Needed Files/: Ion_Source_Assembly-2 Source_Magnets-12.gdml  Ion_Source_Assembly-2 Source_Magnets-4.gdml  TARGET_MAIN_SUPPOT_ROD-1.gdml  Target.gdml  TargetV4_Assem-1 Target_Faceplate2-2.gdml  TargetV4_Assem-1 Target_Lid_4-2.gdml  gps.mac  hfng.gdml  read_gdml.mac  run.mac  run1.mac  vis.mac
GDML2/: .README.txt
GDML2-Build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  G02.sln  G02.vcxproj  G02.vcxproj.filters  INSTALL.vcxproj  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  geotest.vcxproj  geotest.vcxproj.filters
GDML2-Build/Release/: CMakeCache.txt  Ion_Source_Assembly-1 Source_Magnet_Seal-1.gdml  Ion_Source_Assembly-1 Source_Magnets-2..gdml  Ion_Source_Assembly-2 Quartz_Window-1.gdml  SPACER_FOR_KEVIN-1.gdml  SPACER_FOR_KEVIN-2.gdml  TargetV4_Assem-1 Target_Faceplate2-1.gdml  detector.gdml  energy-weight  ogl.mac  run.mac  test.gdml  test3.gdml
GDML2/src/: G02DetectorConstruction.cc
NuRef1/: HFNG_model.cc
NuRef1-Build/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  ZERO_CHECK.vcxproj  cmake_install.cmake
NuRef1-Build/Release/: Ion_Source_Assembly-1 Source_Magnets-16.gdml  Ion_Source_Assembly-1 Source_Magnets-3.gdml  Ion_Source_Assembly-1 Source_Magnets-6.gdml  Ion_Source_Assembly-1 Source_Magnets-8.gdml  Ion_Source_Assembly-2 Source_Magnet_Seal-1.gdml  Ion_Source_Assembly-2 Source_Magnets-7.gdml  Ion_Source_Assembly-2 Source_Magnets-8.gdml  SUPPLY_TUBE_1-2.gdml  TARGET_INSULATOR_CAP-1.gdml  oglvis.mac  (+6 more)
NuRef2-Build/: ALL_BUILD.vcxproj.filters  HFNG_model.sln  HFNG_model.vcxproj  HFNG_model.vcxproj.filters  INSTALL.vcxproj.filters  ZERO_CHECK.vcxproj.filters  read_gdml.mac
Release/: HFNG.root  HFNG_model.ilk  gps.mac  test.mac
backup/: HFNG_model.cc
include/: ActionInitialization.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  HistoManager.hh  PrimaryGeneratorAction.hh  Run.hh  RunAction.hh  SteppingAction.hh  TrackingAction.hh.legacy
macros/: debug.mac
macros and other stuffs/: HFNG_model.in  HFNG_point_source.mac
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorConstruction_with_composite.cc.bak  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  Run.cc  RunAction.cc  ShroudConstruction.cc.bak  SteppingAction.cc  TrackingAction.cc  TrackingAction.cc.legacy
(+373 files in other folders)
